[gd_scene load_steps=48 format=3 uid="uid://c562cpq45fb6x"]

[ext_resource type="Texture2D" uid="uid://0d14hoxupu4" path="res://assets/samurai/ATTACK.png" id="1_01cyv"]
[ext_resource type="Script" uid="uid://djix0ghaqq7xh" path="res://scripts/samurai_enemy.gd" id="1_tlfi0"]
[ext_resource type="Texture2D" uid="uid://bw574qnth7nd4" path="res://assets/samurai/HURT.png" id="2_tlfi0"]
[ext_resource type="Texture2D" uid="uid://be7ueyyxpjvei" path="res://assets/samurai/IDLE.png" id="3_nqg48"]
[ext_resource type="Texture2D" uid="uid://cvamlqikr0bgi" path="res://assets/samurai/RUN.png" id="4_k7ct5"]
[ext_resource type="FontFile" uid="uid://ddmv4fwcipy41" path="res://assets/fonts/PixelOperator8.ttf" id="6_nqg48"]
[ext_resource type="Texture2D" uid="uid://ihp2y8a4vb5m" path="res://assets/hearts/Pixel Heart Sprite Sheet 16x16.png" id="7_k7ct5"]

[sub_resource type="AtlasTexture" id="AtlasTexture_3rfka"]
atlas = ExtResource("1_01cyv")
region = Rect2(0, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_i8sra"]
atlas = ExtResource("1_01cyv")
region = Rect2(96, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_4vq5b"]
atlas = ExtResource("1_01cyv")
region = Rect2(192, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_3nfmf"]
atlas = ExtResource("1_01cyv")
region = Rect2(288, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_42cpl"]
atlas = ExtResource("1_01cyv")
region = Rect2(384, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_vqq2l"]
atlas = ExtResource("1_01cyv")
region = Rect2(480, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_r673r"]
atlas = ExtResource("1_01cyv")
region = Rect2(576, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_mqnmn"]
atlas = ExtResource("2_tlfi0")
region = Rect2(0, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_5esnd"]
atlas = ExtResource("2_tlfi0")
region = Rect2(96, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_w1o2u"]
atlas = ExtResource("2_tlfi0")
region = Rect2(192, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_s4hvt"]
atlas = ExtResource("2_tlfi0")
region = Rect2(288, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_2sux5"]
atlas = ExtResource("3_nqg48")
region = Rect2(0, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_iqfnf"]
atlas = ExtResource("3_nqg48")
region = Rect2(96, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_bhqug"]
atlas = ExtResource("3_nqg48")
region = Rect2(192, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_cyhxw"]
atlas = ExtResource("3_nqg48")
region = Rect2(288, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_wq66c"]
atlas = ExtResource("3_nqg48")
region = Rect2(384, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_183dw"]
atlas = ExtResource("3_nqg48")
region = Rect2(480, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_nflk0"]
atlas = ExtResource("3_nqg48")
region = Rect2(576, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_uqwil"]
atlas = ExtResource("3_nqg48")
region = Rect2(672, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_ggel1"]
atlas = ExtResource("3_nqg48")
region = Rect2(768, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_d8ffw"]
atlas = ExtResource("3_nqg48")
region = Rect2(864, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_2ve04"]
atlas = ExtResource("4_k7ct5")
region = Rect2(0, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_0rhe2"]
atlas = ExtResource("4_k7ct5")
region = Rect2(96, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_6ypbn"]
atlas = ExtResource("4_k7ct5")
region = Rect2(192, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_7rsoo"]
atlas = ExtResource("4_k7ct5")
region = Rect2(288, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_lywsn"]
atlas = ExtResource("4_k7ct5")
region = Rect2(384, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_cvk82"]
atlas = ExtResource("4_k7ct5")
region = Rect2(480, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_77i28"]
atlas = ExtResource("4_k7ct5")
region = Rect2(576, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_mle5l"]
atlas = ExtResource("4_k7ct5")
region = Rect2(672, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_i4kk0"]
atlas = ExtResource("4_k7ct5")
region = Rect2(768, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_s854h"]
atlas = ExtResource("4_k7ct5")
region = Rect2(864, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_tj211"]
atlas = ExtResource("4_k7ct5")
region = Rect2(960, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_kqdjh"]
atlas = ExtResource("4_k7ct5")
region = Rect2(1056, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_a5pfi"]
atlas = ExtResource("4_k7ct5")
region = Rect2(1152, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_f2hc5"]
atlas = ExtResource("4_k7ct5")
region = Rect2(1248, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_sktdc"]
atlas = ExtResource("4_k7ct5")
region = Rect2(1344, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_ghhh6"]
atlas = ExtResource("4_k7ct5")
region = Rect2(1440, 0, 96, 96)

[sub_resource type="SpriteFrames" id="SpriteFrames_xtsox"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3rfka")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i8sra")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4vq5b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3nfmf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_42cpl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vqq2l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r673r")
}],
"loop": true,
"name": &"attack",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_mqnmn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5esnd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w1o2u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s4hvt")
}],
"loop": true,
"name": &"hurt",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2sux5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iqfnf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bhqug")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cyhxw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wq66c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_183dw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nflk0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uqwil")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ggel1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d8ffw")
}],
"loop": true,
"name": &"idle",
"speed": 13.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2ve04")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0rhe2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6ypbn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7rsoo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lywsn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cvk82")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_77i28")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mle5l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i4kk0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s854h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tj211")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kqdjh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a5pfi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f2hc5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sktdc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ghhh6")
}],
"loop": true,
"name": &"run",
"speed": 15.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_n0sak"]
height = 34.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tlfi0"]
size = Vector2(60, 200)

[node name="samurai_enemy" type="CharacterBody2D" groups=["enemy"]]
z_index = -1
collision_layer = 4
script = ExtResource("1_tlfi0")

[node name="Sprite" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -16)
sprite_frames = SubResource("SpriteFrames_xtsox")
animation = &"idle"
autoplay = "idle"

[node name="CollisionShape" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_n0sak")

[node name="ShapeCastLeft" type="ShapeCast2D" parent="."]
visible = false
position = Vector2(-30, 0)
shape = SubResource("RectangleShape2D_tlfi0")
target_position = Vector2(-400, 0)
collision_mask = 2

[node name="ShapeCastRight" type="ShapeCast2D" parent="."]
visible = false
position = Vector2(30, 0)
shape = SubResource("RectangleShape2D_tlfi0")
target_position = Vector2(400, 0)
collision_mask = 2

[node name="RayCastRight" type="RayCast2D" parent="."]
target_position = Vector2(25, 0)
collision_mask = 2

[node name="RayCastRightTerrain" type="RayCast2D" parent="."]
target_position = Vector2(25, 0)
collision_mask = 5

[node name="RayCastLeft" type="RayCast2D" parent="."]
target_position = Vector2(-25, 0)
collision_mask = 2

[node name="RayCastLeftTerrain" type="RayCast2D" parent="."]
target_position = Vector2(-25, 0)
collision_mask = 5

[node name="RayCastDownLeft" type="RayCast2D" parent="."]
position = Vector2(-25, 0)

[node name="RayCastDownRight" type="RayCast2D" parent="."]
position = Vector2(25, 0)

[node name="Label" type="Label" parent="."]
offset_left = -60.0
offset_top = -29.0
offset_bottom = -21.0
theme_override_fonts/font = ExtResource("6_nqg48")
theme_override_font_sizes/font_size = 8
text = "10"
horizontal_alignment = 2

[node name="HeartIcon" type="Sprite2D" parent="."]
position = Vector2(8, -25)
scale = Vector2(0.835938, 0.835938)
texture = ExtResource("7_k7ct5")
region_enabled = true
region_rect = Rect2(0, 2, 16, 13)

[node name="EnemyAudio" type="AudioStreamPlayer2D" parent="."]

[connection signal="animation_looped" from="Sprite" to="." method="_on_sprite_animation_looped"]
[connection signal="finished" from="EnemyAudio" to="." method="_on_enemy_audio_finished"]
